k8s/lagom/ingress-lagom-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ing-lagom-service
  labels:
    app: ing-lagom
spec:
  type: NodePort
  selector:
    app: ing
  ports:
  - port: 80
    targetPort: 80
