k8s/lagom/lagom-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: microservices-example
  name: lagom-server
spec:
  ports:
  - port: 9000
    targetPort: 9000
  selector:
    app: lagom-server
