k8s/lagom/ingress-lagom.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ing-lagom
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1$2
    nginx.ingress.kubernetes.io/upstream-vhost: $host
spec:
  rules:
  - http:
      paths:
      - path: /(.*)
        backend:
          serviceName: webapp
          servicePort: 3000
      - path: /(ws)
        backend:
          serviceName: lagom-server
          servicePort: 9000
      - path: /(api/sp)(.*)
        backend: 
          serviceName: lagom-server
          servicePort: 9000
